# kg-generator

./: .gitignore  Cargo.toml  README.md
input/: search_words.csv
src/: graph.rs  main.rs  read_words.rs  sparql.rs  utils.rs  word_search.rs
